Esquire API and types generalization

--- a/frontend/esquire/src/ui/dialog/EsqDetailsDialog.scss
+++ b/frontend/esquire/src/ui/dialog/EsqDetailsDialog.scss
@@ -104,7 +104,10 @@
   .esq-tab-image {
     min-height: 120px; 
     max-height: 240px; 
+  }
 
+  .esq-name-image {
+    height: 64px; 
   }
 
   .esq-mat-tab-group{
